force-app/main/default/objects/Consolidated_Contract_Lines__c/Consolidated_Contract_Lines__c.object-meta.xml
<CustomObject>
    <description>SOX object - Stores CLIs that belonged to a QLI consolidated into this quote line</description>
    <label>Consolidated Contract Line</label>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Consolidated Contract Lines</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidated Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>