force-app/main/default/objects/Consolidated_Contract_Lines__c/fields/Consolidated_Prior_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Prior_Net_Total__c</fullName>
    <description>This field will store Prior Net Total for this Line and all other contract lines that got consolidated with this. RWD-1511</description>
    <label>Consolidated Prior Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>