force-app/main/default/objects/Consolidated_Contract_Lines__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Consolidated Contract Lines</relationshipLabel>
    <relationshipName>Consolidated_Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>