force-app/main/default/objects/Consolidated_Contract_Lines__c/fields/Service_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract_Id__c</fullName>
    <label>Service Contract Id</label>
    <length>55</length>
    <type>Text</type>
</CustomField>