force-app/main/default/objects/Consolidated_Contract_Lines__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Line__c</columns>
    <columns>Contract_Line_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>